--- a/day_latest/package.json
+++ b/day_latest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "min-react-01",
+  "name": "vite-runner",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.2.0"
+    "vite": "^5.0.8"
   }
 }
